<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Captura_Datos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/textView_titulo_captura_datos"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerRefrigerantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/opciones_array"
            />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textView_tipo_consumo"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_Inverter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_consumo_inverter" />

            <RadioButton
                android:id="@+id/radioButton_Convencional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_consumo_convencional" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textView_presion_lado_baja"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editText_Presion_Baja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_presion_lado_baja"
            android:inputType="number|numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/editText_temperatura_lado_baja"
            android:text="@string/textView_temperatura_lado_baja"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Temperatura_Baja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/editText_temperatura_lado_baja"
            android:inputType="number|numberDecimal|numberSigned" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_temperatura_lado_alta"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_temperatura_Alta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/editText_temperatura_lado_alta"
            android:inputType="number|numberDecimal|numberSigned" />

        <Button
            android:id="@+id/button_Diagnosticar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:text="@string/button_Diagnosticar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_diagnostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_diagnostico" />

        <Button
            android:id="@+id/button_detalle_diagnostico"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_detalle_diagnostico"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>