<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/textView_titulo"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="166dp"
        android:layout_gravity="center"

        android:src="@drawable/hvac_icono" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/textView_introduccion"
        android:textSize="20sp"
        android:justificationMode="inter_word"/>

    <Button
        android:id="@+id/button_iniciar"
        android:layout_width="221dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:text="@string/button_iniciar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_valores_optimos"
        android:layout_width="221dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/buton_valores_optimos"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_fuzzy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fuzzy" />

</LinearLayout>